--- a/src/css/card.css
+++ b/src/css/card.css
@@ -4,23 +4,34 @@
   padding: 2rem;
   padding-top: 1rem;
   /* margin: 1rem auto; */
-  margin-top: 5rem;
+  /* margin-top: 5rem; */
   display: grid;
   grid-template-areas:
     "pic first first"
-    "connect second second"
-    "connect third third";
+    "second second connect"
+    "third third connect";
 
-  background-color:#ecd9af;
-  border-radius: 16px;
-  border: 2px solid #1c5162;
+  background-color: #ecd9af;
   color: #333333;
+}
+.product-card-subheader {
+  background-color: #333333;
+  color: #ecd9af;
+  width: fit-content;
+  padding: 0.25rem;
+  border-radius: 3px;
+  font-size: 1.2rem;
+}
+.product-card-header {
+  color: #333333;
+  padding-bottom: 0.5rem;
 }
 .product-btn {
   display: flex;
   justify-content: space-evenly;
   text-align: center;
   padding-bottom: 1rem;
+  padding-top: 1rem;
   margin-bottom: 2rem;
 }
 .first-row {
@@ -30,9 +41,9 @@
 }
 .first-row-image {
   grid-area: pic;
-  height: 125px;
-  width: 125px;
-  border-radius: 50%;
+  height: 130px;
+  width: 130px;
+  border-radius: 10px;
   margin: 1rem;
 }
 .first-row-text {
@@ -42,37 +53,68 @@
 }
 .second-row {
   grid-area: second;
+  padding: 1rem;
 }
 
 .third-row {
-  text-align: right;
   grid-area: third;
+  padding: 1rem;
+}
+
+.connect-callapse {
+  grid-area: connect;
+  writing-mode: vertical-rl;
+  text-orientation: upright;
+  max-width: 1rem;
+  height: auto;
+  width: auto;
+}
+.collapse-width {
+  position: relative;
+  width: 0;
+  overflow: hidden;
+  -webkit-transition: width 0.35s ease;
+  -moz-transition: width 0.35s ease;
+  -o-transition: width 0.35s ease;
+  transition: width 0.35s ease;
 }
 .connect-column {
   display: grid;
-  grid-template-columns: 1rem 1fr;
-  /* text-align: center; */
-  /* padding-bottom: 2rem; */
   grid-area: connect;
+  grid-template-areas: "icons header";
+  justify-content: center;
+  align-items: center;
 }
-.connect-text {
-  max-width: 1rem;
-  writing-mode:vertical-rl;
+ .connect-text {
+   max-width:fit-content; 
+  writing-mode: vertical-rl;
   text-orientation: upright;
-  margin-top: 3rem;
-  padding: 0;
-}
+  padding: 0.25rem;
+  border-radius: 10px;
+  background-color: #252525;  
+  color: #ecd9af;
+  grid-area: header;
+  font-size: 1.4rem;
+} 
 .icon-row {
-  /* grid-area: connect; */
+  grid-area: icons;
   display: flex;
   flex-flow: column;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
-  /* padding-top: 2rem; */
+  background-color: #ecd9af;
+  max-width: 50%;
+  height: 75%;
+}
+/* .card-icon-container {
+  padding: 1rem;
+} */
+.card-icon {
+  color: #252525;
 }
 .icon {
   padding: 1rem auto;
 }
 .button-group {
-  text-align:center;
+  text-align: center;
 }
